# plugin-storage-gdrive

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: gdrive_ops.rs  host_bridge.rs  lib.rs  multipart.rs
src/ui/: settings.html
